conf/k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platafyi-api
  namespace: platafyi
spec:
  selector:
    app: platafyi-api
  ports:
    - port: 80
      targetPort: 8080
