conf/k8s/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platafyi-api
  namespace: platafyi
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: api.plata.fyi
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: platafyi-api
                port:
                  number: 80
  tls:
    - hosts:
        - api.plata.fyi
      secretName: api-plata-fyi-tls
